--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-session": "^1.15.0",
+    "method-override": "^2.3.7",
     "mongoose": "^4.7.7",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
